--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -87,7 +87,7 @@ The Summer of 2019 will be the 50th anniversary of the Apollo 11 moon landing an
 
 \section{Overview}
        \subsection{Scope}
-        This document focuses on the 3D animation for the Apollo 11 Mission that will be created by our group, "The Apolloers" for display at OMSI. The design principals of the project will be outlined here, as well as design elements, such as functionality, usability, and requirements. These principals and elements will outline the deliverables of our project as well as the resources needed to complete it. The context, stakeholders, and intended audience our project will be used in will also be outlined, which will provide supplementary reasoning for our chosen delivarables.  %MORE HERE
+        This document focuses on the 3D animation for the Apollo 11 Mission that will be created by our group, "The Apolloers" for display at OMSI. The design principals of the project will be outlined here, as well as design elements, such as functionality, usability, and requirements. These principals and elements will outline the deliverables of our project as well as the resources needed to complete it. The context, stakeholders, and intended audience our project will be used in will also be outlined, which will provide supplementary reasoning for our chosen delivarables. 
         
     \subsection{Purpose}
         The design and structure of this project will be outlined so that readers would be able to understand how the 3D animation is organized from a development viewpoint. In addition to the readers, this document will also serve as guidelines for our group to follow throughout the year. This document will be changed throughout the year as we refine our design. 
@@ -96,7 +96,7 @@ The Summer of 2019 will be the 50th anniversary of the Apollo 11 moon landing an
         This document is intended for the stakeholders of the Apollo 11 3D animation, as well as any interested group that would like to know more about how the animation is structured. Some main takeaways of this document are the design, structure, and connectivity of the components of our animation, so that readers would have a general idea of how to make a similarly structured project. 
 
 \section{Definitions}
-%Alphabetize this table!!!
+
 \begin{tabular} {|l|p{13.5cm}|}
 \hline
 Term & definition \\ \hline
@@ -141,18 +141,21 @@ Polygon Count & Refers to the number of polygons in a scene. The more polygons i
     \subsection{Design Overlays} %Any additional information on certain viewpoints.
 	
 	\subsubsection{Textures and 3D Models}
-	Most of these textures will come from the NASA websites, which are readily available for everyone to use. Do note that these textures are high poly textures, and are extremely accurate. The 3D model of the Saturn 5 will come from somewhere else, most likely a model sharing site. If we cannot find a low poly 3D model of the Saturn 5, we must settle for a high poly model or make one ourselves. If we are left with a high poly 3D model, we must separate the more fine details from the model in attempt to reduce our polygon budget. Our last choice is to make it ourselves, in this case the project will take more time due to more allocation of time to finish the 3D model.
+	Textures will be needed for some of our 3D objects, such as the Earth and Moon. Most of these textures will come from the NASA websites, which are readily available for public use. It is notable that these textures have been created with great detail, meaning that the textures may slow the program, or look out of place if near a lower quality texture. 
+	
+	The 3D model of the spacecrafts, such as the Saturn 5 rocket, will likely be obtained from a model sharing site. If we cannot find a low-poly 3D model of the Saturn 5, we must settle for a high-poly model or make one ourselves. If we are left with a high-poly 3D model, we must separate the more fine details from the model in attempt to reduce our polygon budget. Our last choice is to make it ourselves, in this case the project will take more time due to more allocation of time to finish the 3D models.
 	
 	\subsubsection{The Flight Path}
-	In terms of the flight path, optimally we would want a dataset of the whole flight and back, it is very easy to convert flight data into a virtual path instead of calculating and predicting the path through the use of initial and final variables. If it turns out that we cannot find any dataset for the flight, we can calculate the flight path in a similar amount of time, but will require us to sit down and research orbital mechanics. 
+	In terms of the flight path, optimally we would want a dataset of the whole flight and back. Converting flight data into a virtual path is relatively simple compared to calculating and predicting the path through the use of initial and final variables. If we are unable to acquire a dataset for the flight, we will then calculate the flight path ourselves, requiring additional time to research orbital mechanics. 
 	
 	\subsubsection{Planetarium SDK}
-	One of our biggest stretch goals is to manage to pipe in our animation into one of their planetariums. We suspect that their planetariums use some type of SDK to interpolate subsections or FOV's into smaller chunks, we just don't have access to their SDK. The SDK is probably within the hands of the company that built the planetarium for OMSI, and will probably need some negotiation to get our hands on it. 
+	One of our biggest stretch goals is to integrate our animation into the OMSI planetarium. We suspect that their planetariums use an SDK to interpolate subsections of the projection, but we currently do not have access to that SDK. The SDK is likely managed by the company that built the planetarium for OMSI, meaning that our group may need to negotiate with that company to be allowed to make use of their SDK. 
     
     \subsection{Design Rationale}
-	The basic rationale of our project is that setting the scene correctly is the most important factor in making this animation the best it can be. The Earth, Moon, and Sun need to be in the right position and the camera (or Eye) needs to be in the right position to reflect that. The lighting from the sun needs to be accurate as it reflects and refracts off the lunar capsule, moon, and Earth. The small details matter the most, such as the Earth having its iridescent glow thats given off by its atmosphere, or both planetoids having a dark and a light side. All of these combined truly create the scene, the flight path is the simpliest part, but making it feel like the Apollo 11 mission is the hardest.
+	The basic rationale of our project is that setting the scene correctly is the most important factor in making this animation high quality. The Earth, Moon, and Sun need to be in the right position and the view port needs to be in the right position to reflect that. The lighting from the sun needs to be accurate as it reflects and refracts off the lunar capsule, Moon, and Earth. The small details matter the most, such as the Earth having its iridescent glow that is given off by its atmosphere, or both planetoids having a dark and a light side. With all of this combined, our goal is to make the audience feel as if they are watching the Apollo 11 mission live.
+	
     \subsection{Design Languages}
-	C++ is going to be our design language solely because all of the OpenGL librarys are in C++. Besides that, C++ is rather syntactically sound. It gives the programmer alot of control over what he wants to do, but on the flip side this allows the programmer to make alot of mistakes. It is rather efficient and fast like its older brother, C, but adopts less of the "aiming a shotgun at your foot without safety on" style that C has, but has more backend librarys that can help the programmer achieve what he is trying to do, although this affects efficiency and control that the programmer has over what he is doing, but due to the scope of the project, this affect is rather minimal. C++ does not do much of cleanup in terms of memory, if you allocate memory you must make sure to free that memory incase memory leaks arise. 
+	C++ is going to be our design language solely because of our choice to use OpenGL as our API. OpenGL makes use of graphics libraries that are written in C++, meaning that we must also utilize that same language. C++ gives the programmer great control over what they want to do, but because of that control, this allows the programmer to make a lot of mistakes. C++ is fast and efficient like its predecessor language, C, and has more back-end libraries that can help the programmer achieve what he is trying to do. Even though these extra libraries can slow down an application, the effect is minimal for a project with a scope as large as ours. Lastly, our group will need to be cautious with memory usage because C++ does not automatically clean up memory such as some other languages, so we will need to be sure to free any memory that we allocate. 
 
 
 \section{Design Viewpoints}
