--- a/Fall 18 Progress/group49_progress_report.tex
+++ b/Fall 18 Progress/group49_progress_report.tex
@@ -68,8 +68,7 @@
         }
         \begin{abstract}
         % 6. Fill in your abstract   
-    Our group, `The Apolloers', have been working on a 3D animation of the Apollo 11 Moon Space Mission and this document provides a progress report for our first term of work. So far, most of our work has focused on documentation and preparing for development, which will start after this term, Fall 2018. % add more
-
+    Our group, `The Apolloers', has been working to create a 3D animation of the Apollo 11 Moon Space Mission and this document serves as a progress report for Fall 2018, our first term of work. So far, most of our work has focused on documentation and preparing for development, which will start after the end of this term. Two portions of the animation will be completed as a final project for our Into to Computer Graphics course, and will allow for a smoother transition into the project's true development cycle. 
 
         \end{abstract}     
     \end{singlespace}
@@ -86,23 +85,31 @@
 % 8. now you write!
 
 \section{Project Purpose}
-Next Summer, July 2019, will mark the 50th anniversary of the Apollo 11 Mission. This mission, operated by The National Aeronautics and Space Administration (NASA), made history by making Neil Armstrong the first human to set foot on the Moon. Our project, proposed by The Oregon Museum of Science and Industry (OMSI), is to create a 3D animation of the entire Apollo 11 Mission to be put on display in OMSI's commemorative display next Summer. Users of the animation will be able to control the view of the mission during the animation and step through the animation at their discretion. The purpose of this animation is to give viewers an accurate depiction of the Apollo 11 mission with all its complexity, as well being a tool to learn about space travel and to inspire curiosity. 
+Next Summer, July 2019, will mark the 50th anniversary of the Apollo 11 Mission. This mission, operated by The National Aeronautics and Space Administration (NASA), made history by making Neil Armstrong the first human to set foot on the Moon. Our project, proposed by The Oregon Museum of Science and Industry (OMSI), is to create a 3D animation of the entire Apollo 11 Mission to be put on display in OMSI's commemorative display next Summer. The purpose of this animation is to give viewers an accurate depiction of the Apollo 11 mission with all its complexity, as well being a tool to learn about space travel and to inspire curiosity. 
 
 \section{Goals}
+Our animation, which will primarily be made using OpenGL, will need to be fully functional before the OSU Engineering Expo on May 18th, 2019. This means that the entire mission is animated and allows users to take control of the viewpoints and time of the mission. If possible, the animation will also need to be able to be shown in the OMSI planetarium, but it is uncertain if our group will gain access to the development tools necessary to show the animation using the 10-projector setup. 
+\newline
+\newline
+Another goal is to include audio along with the animation, particularly the mission transmissions between the the astronauts and Earth. Building off of this, captions may also be included for the viewers to know what is being said, notably depending on the quality of audio that is able to be obtained. Our overarching goal for the viewers is to make sure that the wide variety of audiences that OMSI draws will all be able to view and interact with the 3D animation with ease. Simple user tests may be organized later to ensure this goal is met. 
 
 
 \section{Current Status}
-
+While our group will not officially start development until the end of this term, the final project for the Introduction to Computer Graphics course that our group is in allowed us to choose our implementation. Two of our members decided to use this opportunity to start creating scenes for the Apollo 11 3D animation, namely the overall scene (Earth, Moon, background, etc.) and the final splashdown. These will provide great starting points for when our group truly starts development. Lastly, to finish out this term, we plan to update all current documentation and make sure that our group repository contains all our work and is ready for when deveopment starts. 
 
 \section{Issues}
-
+This term, our group's most prevalent problem was how to document our project according to the guidelines set. We often found ourselves having issues following IEEE standards because our project did not seem to align well with those standards. Also, in terms of a 3D animation, most of the organization that needs to be done is included when deciding what to include in the animation, but in our case, our animation has already been laid out since it will follow the Apollo 11 Mission. This all culminated into frustrations with this term's documentation, but with help from our TA, Richard Cunard, and reviewing how previous groups approached similar issues helped to guide our writing. 
+\newline
+\newline
+The other sizable issue was a lack of communication with Jim Todd, our client from OMSI. When the term started, Jim was not responding to our attempts at communication and as a result, our group was primarily in contact with Mike Bailey, our contact at OSU. When our group had finished our Requirements Document, we were able to send Jim the document through an email sent by Mike and we received a good response. We all hope that if we follow this same approach for Client Verification, Jim will look over what we have done and send a response once again. Regardless of this, our group will be treating Mike Bailey as our primary client, but we will continue to keep in contact with Jim Todd and we hope to meet Jim at OMSI before the start of Winter term. 
 
 \section{Retrospective}
 
 \begin{tabular}{|l|l|l|l|}
 \hline
-    Task & Positives & Deltas & Actions  \\
-    
+    Task? & Positives & Deltas & Actions  \\
+     & & & \\
+     & & & \\
     \hline
      
 \end{tabular}
