did retrospective table

--- a/Fall 18 Progress/group49_progress_report.tex
+++ b/Fall 18 Progress/group49_progress_report.tex
@@ -102,12 +102,18 @@ This term, our group's most prevalent problem was how to document our project ac
 
 \section{Retrospective}
 
-\begin{tabular}{|l|l|l|l|}
+\begin{tabular}{|p{0.3\linewidth}|p{0.3\linewidth}|p{0.3\linewidth}|}
 \hline
-    Task? & Positives & Deltas & Actions  \\
-     & & & \\
-     & & & \\
+     Positives & Deltas & Actions  \\
     \hline
+     All of the resources we need are readily available to us. & The design document, some of the things we do not have access too, such as the SDK for the planetarium, we will need to gain access to that at a later date. &Mike Bailey will be trying to contact the company that built the planetarium for OMSI, as we expect it is an inhouse SDK.\\ 
+     \hline
+     Our client from OMSI isn't the best at communicating, but Mike provided all of the info for us!&We need to do a lot of boiler plate code to set up our project.&We are all going to be working on it throughout the winter break progressively.\\
+     \hline
+     The project has been moving consistently forward without any hiccups or problems.&We need to have extensive knowledeg of shaders to possibly make the scene even better, more than what we know now.&Dean Akin will be taking a shaders course with Mike Bailey to fill us in with the tips and tricks about shaders.\\
+     \hline
+     The project is so straightforward, there has not been any problems, or any confusion on what we must be doing.&&\\
+     \hline
      
 \end{tabular}
 
