--- a/Fall 18 Progress/group49_progress_report.tex
+++ b/Fall 18 Progress/group49_progress_report.tex
@@ -106,11 +106,11 @@ This term, our group's most prevalent problem was how to document our project ac
 \hline
      Positives & Deltas & Actions  \\
     \hline
-     All of the resources we need are readily available to us. & The design document, some of the things we do not have access too, such as the SDK for the planetarium, we will need to gain access to that at a later date. &Mike Bailey will be trying to contact the company that built the planetarium for OMSI, as we expect it is an inhouse SDK.\\ 
+     All of the resources we need are readily available to us and we have composed a list of requirements for our video. & The design document, some of the things we do not have access too, such as the SDK for the planetarium, we will need to gain access to that at a later date. &Mike Bailey will be trying to contact the company that built the planetarium for OMSI, as we expect it is an inhouse SDK.\\ 
      \hline
-     Our client from OMSI isn't the best at communicating, but Mike provided all of the info for us!&We need to do a lot of boiler plate code to set up our project.&We are all going to be working on it throughout the winter break progressively.\\
+     Our client from OMSI isn't the best at communicating, but Mike will act as a liaison for us.&We need to do a lot of foundational code to set up the environment for our project.&We are all going to be working on drafting scenes and the foundational code throughout the winter break progressively.\\
      \hline
-     The project has been moving consistently forward without any hiccups or problems.&We need to have extensive knowledeg of shaders to possibly make the scene even better, more than what we know now.&Dean Akin will be taking a shaders course with Mike Bailey to fill us in with the tips and tricks about shaders.\\
+     Our group has compiled a list of technologies we will need in order to complete the project, all of which are easily atainable.&We need to have extensive knowledege of shaders in order to create detailed scenes without increasing the polygon count.&Dean Akin and Shannon Sandy will be taking a shaders course with Mike Bailey to fill us in with the tips and tricks about shaders.\\
      \hline
      The project is so straightforward, there has not been any problems, or any confusion on what we must be doing.&&\\
      \hline
