--- a/Fall 18 Progress/group49_progress_report.tex
+++ b/Fall 18 Progress/group49_progress_report.tex
@@ -112,7 +112,7 @@ This term, our group's most prevalent problem was how to document our project ac
      \hline
      Our group has compiled a list of technologies we will need in order to complete the project, all of which are easily atainable.&We need to have extensive knowledege of shaders in order to create detailed scenes without increasing the polygon count.&Dean Akin and Shannon Sandy will be taking a shaders course with Mike Bailey to fill us in with the tips and tricks about shaders.\\
      \hline
-     The project is so straightforward, there has not been any problems, or any confusion on what we must be doing.&&\\
+     We have outlined how our project will be made and with what resources. We also completed the necessary documentation needed before we begin development of our video.&We need to send our documents to our client to receive his verification before we begin development.& Our plans to travel to OMSI with Mike Bailey before the start of winter term to meet our client. This will allow us to discuss the logistics of the project with our client as well as gain an understanding of what kind of storyboarding the client is expecting.\\
      \hline
      
 \end{tabular}
