--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -40,7 +40,7 @@
     \begin{singlespace}
         \hfill 
         % 4. If you have a logo, use this includegraphics command to put it on the coversheet.
-        \includegraphics[height=4cm]{coe_v_spot1.eps}   
+        \includegraphics[height=4cm]{OSU_horizontal_2C_O_over_B.eps}   
         \par\vspace{.2in}
         \centering
         \scshape{
@@ -89,15 +89,16 @@ Our group will be recreating the Apollo 11 mission in a 25-minute video using 3D
     This project will be a 25 minute video whose target audience are the people attending the planetarium at OMSI. This includes school children on a field trip, people interested in space travel, and people who are attending the planetarium to be entertained. Since the planetarium at OMSI has a large audience of diverse people, the Apollo 11 recreation will need to be accessible, entertaining, as well as realistic in order to educate the audience without boring them.
     \subsection{Overview}
     For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
-    \begin{tabular} {|l|p{13.5cm}|}
-\hline
-Term & definition \\ \hline
-API & An Application Programming Interface is a set of protocols and tools that are used to build a software application. Essentially the `building blocks' that a programmer uses to build an application.  \\ \hline
-Apollo 11 Mission & A spaceflight operated by NASA to land the first humans on the Moon, launched July 16th, 1969.  \\ \hline
-NASA & The National Aeronautics and Space Administration is a federal agency that focuses on research and development related to air and space.	\\ \hline
-OMSI & The Oregon Museum of Science and Industry, located in Portland, Oregon	\\ \hline
-OpenGL & An open-source graphics library API that is used to interact with graphics hardware to design 3D renderings.	\\ \hline
-SDK & A Software Development Kit is a set of tools that program developers use to write programs for an application. \\ \hline
+    \subsection{Definitions}
+\begin{tabular} {|l|p{13.5cm}|}
+    \hline
+    Term & definition \\ \hline
+    API & An Application Programming Interface is a set of protocols and tools that are used to build a software application. Essentially the `building blocks' that a programmer uses to build an application.  \\ \hline
+    Apollo 11 Mission & A spaceflight operated by NASA to land the first humans on the Moon, launched July 16th, 1969.  \\ \hline
+    NASA & The National Aeronautics and Space Administration is a federal agency that focuses on research and development related to air and space.	\\ \hline
+    OMSI & The Oregon Museum of Science and Industry, located in Portland, Oregon	\\ \hline
+    OpenGL & An open-source graphics library API that is used to interact with graphics hardware to design 3D renderings.	\\ \hline
+    SDK & A Software Development Kit is a set of tools that program developers use to write programs for an application. \\ \hline
 
 \end{tabular}
 \section{Specific Requirements}
@@ -120,12 +121,10 @@ SDK & A Software Development Kit is a set of tools that program developers use t
     \subsection{Performance Requirements}
     On a suitable, mid-range computer, the animation should be able to run and keep a steady frame rate even when given extreme values for input. Ideally, the animation will run at 60 frames per second with little variation, but even more important than the frames per second is that the animation is not `choppy' and is easy to watch.
 
-\newpage
-
 \section{Gantt Chart}
 
 \begin{figure}[!htb]
-    \includegraphics[width=\linewidth]{Gantt.png}
+    \includegraphics[width=\linewidth]{Gantt.PNG}
     \caption{Gantt chart of proposed timeline}
     \label{fig:Gantt Chart}
 \end{figure}
