--- a/Fall 18 Progress/group49_progress_report.tex
+++ b/Fall 18 Progress/group49_progress_report.tex
@@ -106,13 +106,18 @@ This term, our group's most prevalent problem was how to document our project ac
 \hline
      Positives & Deltas & Actions  \\
     \hline
-     All of the resources we need are readily available to us and we have composed a list of requirements for our video. & The design document, some of the things we do not have access too, such as the SDK for the planetarium, we will need to gain access to that at a later date. &Mike Bailey will be trying to contact the company that built the planetarium for OMSI, as we expect it is an inhouse SDK.\\ 
+    
+    
+    
+    \textbf{Resources:} Most of the resources we need are readily available to us and we have composed a list of requirements for the 3D animation to guide us through development. & Our group does not yet have access to the OMSI SDK that will be required for display in the planetarium. & Mike Bailey will be trying to contact the company that built the planetarium for OMSI in an attempt to gain access to the SDK.\\ 
      \hline
-     Our client from OMSI isn't the best at communicating, but Mike will act as a liaison for us.&We need to do a lot of foundational code to set up the environment for our project.&We are all going to be working on drafting scenes and the foundational code throughout the winter break progressively.\\
+	\textbf{Pre-Development:} We will be able to complete two scenes of the animation as final projcets for our Intro to Computer Graphics course, meaning that we will have a head start for development & A large portion of code will need to be set up as a foundation for the environment of the project. & We are all going to be working on drafting scenes and the code foundation throughout the Winter break progressively.\\
      \hline
-     Our group has compiled a list of technologies we will need in order to complete the project, all of which are easily atainable.&We need to have extensive knowledege of shaders in order to create detailed scenes without increasing the polygon count.&Dean Akin and Shannon Sandy will be taking a shaders course with Mike Bailey to fill us in with the tips and tricks about shaders.\\
+     \textbf{Computer Graphics:} Our group has learned the basics of computer graphics through Mike Bailey's course this term. We all have the knowledge for implementation, and can more easily research the area of computer graphics as needed. & In order to keep our polygon count low, we will need to have extensive knowledge of shaders create detailed scenes. & Dean Akin and Shannon Sandy will be taking an additional shaders course with Mike Bailey during Winter term to gain more knowledge of the subject.\\
      \hline
-     We have outlined how our project will be made and with what resources. We also completed the necessary documentation needed before we begin development of our video.&We need to send our documents to our client to receive his verification before we begin development.& Our plans to travel to OMSI with Mike Bailey before the start of winter term to meet our client. This will allow us to discuss the logistics of the project with our client as well as gain an understanding of what kind of storyboarding the client is expecting.\\
+     \textbf{Documentation:} Throughout the term, we have outlined how our project will be made and with what resources. We have received feedback from many sources to continually improve our work. & We need to send our documents to our client to receive verification that we are on the right track and so that we can begin development. & We are currently planning a trip to OMSI with Mike Bailey to meet Jim Todd in person before the end of Winter break. This will allow us to discuss the logistics of the project with Jim as well as gaining an understanding of what kind of storyboard is expected.\\
+     \hline
+     \textbf{Technologies:} Each member of our group reviewed a technology that would be implemented in our animation: 3D models, audio, and the API to be used. We explored many more options and became more confident about our choices. & There are some technology choices that will not be able to be made until later in development, such as how to best compile our project to be the most accessible at OMSI. & Our trip to OMSI will be a great chance to ask these questions, as well as seeing exactly what options we have to work with. \\ 
      \hline
      
 \end{tabular}
