Updated with new requirements

--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -129,4 +129,11 @@ Our group will be recreating the Apollo 11 mission in a 25-minute video using 3D
     \label{fig:Gantt Chart}
 \end{figure}
 
+\section{Appendix}
+Since this document was first drafted, the requirements for our project have changed. On January 3rd, our team and Mike Bailey drove to OMSI to meet with our client, Jim Todd, for the first time. During our meeting, Jim Todd provided our team with more refined requirements for our video. The most significant change was that Jim Todd wanted our animation to recreate the aspects Apollo 11 mission that took place on the lunar surface. Instead of animating the launch, flight to the moon, and flight back to Earth, our team will now include historic audio/video to provide context to the Apollo 11 mission. 
+
+Our team will also include a default video that can be paused and restarted whenever the audience wishes to change viewpoints. The video will be from the perspective of an astronaut as he leaves the lunar module, travels the lunar surface, plants the American flag, and finally board the lunar module for lunar launch. Changing viewpoints during the default video will pause the animation and the user will be able to press a key on the keyboard to continue the video.
+
+Our video will now be 10-15 minutes long instead of 20 minutes. This change was made because each planetarium show is 20 minutes long and our team wanted to allow the audience time to ask any questions about the Apollo 11 mission during the show.
+
 \end{document}
